# Agents_with_MCP

./: README.md  client.py  main.py  mathserver.py  playwright.json  pyproject.toml  requirments.txt  weather.json  weather.py
